kube_test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=hello kubernetes"
          ports:
            - containerPort: 5678
