kube_test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-app
  ports:
    - port: 80
      targetPort: 5678
